--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build --output public"
+        "build": "vite build public"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
